[gd_scene load_steps=2 format=3 uid="uid://dqp0yt5efgnyw"]

[ext_resource type="Script" path="res://scripts/ui/OptionsMenu.gd" id="1_7gpus"]

[node name="OptionsMenu" type="PopupPanel"]
initial_position = 1
size = Vector2i(876, 400)
script = ExtResource("1_7gpus")

[node name="Margin" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 872.0
offset_bottom = 396.0
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 28
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 28

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Header" type="Label" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="MasterRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="Margin/VBox/MasterRow"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 2

[node name="MasterValue" type="Label" parent="Margin/VBox/MasterRow"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="MasterSlider" type="HSlider" parent="Margin/VBox/MasterRow"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="MusicRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Margin/VBox/MusicRow"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Music"
horizontal_alignment = 2

[node name="MusicValue" type="Label" parent="Margin/VBox/MusicRow"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="MusicSlider" type="HSlider" parent="Margin/VBox/MusicRow"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="Margin/VBox/SFXRow"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "SFX"
horizontal_alignment = 2

[node name="SFXValue" type="Label" parent="Margin/VBox/SFXRow"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="SFXSlider" type="HSlider" parent="Margin/VBox/SFXRow"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SensitivityRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="SensitivityLabel" type="Label" parent="Margin/VBox/SensitivityRow"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Sensitivity"
horizontal_alignment = 2

[node name="SensitivityValue" type="Label" parent="Margin/VBox/SensitivityRow"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "40%"
horizontal_alignment = 2

[node name="SensitivitySlider" type="HSlider" parent="Margin/VBox/SensitivityRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
min_value = 0.001
max_value = 0.01
step = 0.001
value = 0.004

[node name="VideoRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Fullscreen" type="CheckBox" parent="Margin/VBox/VideoRow"]
layout_mode = 2
text = "Fullscreen"

[node name="VSync" type="CheckBox" parent="Margin/VBox/VideoRow"]
layout_mode = 2
text = "VSync"

[node name="InvertY" type="CheckBox" parent="Margin/VBox/VideoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "InvertY"

[node name="ButtonRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ApplyButton" type="Button" parent="Margin/VBox/ButtonRow"]
layout_mode = 2
text = "Apply"

[node name="BackButton" type="Button" parent="Margin/VBox/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"
